--- a/Temp Data/Sales_Analysis.ipynb
+++ b/Temp Data/Sales_Analysis.ipynb
@@ -2681,7 +2681,7 @@
    "id": "1e91055b",
    "metadata": {},
    "source": [
-    "You can check the whole project on my Github Profile"
+    "You can check the whole project on my Github Profile-https://github.com/raghav-20/Data-Analysis-Using-Python"
    ]
   },
   {
